# tempoo

./: .gitignore  Readme.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
tempoo/: gps.py
tests/: data_test.txt  make_test_data.py  test_gps.py  test_split_time_into_windows.py  test_utc.py  test_utc_compare_with_obspy.py
timetools/: __init__.py  doy.py  local.py  timeline.py  timetick.py  utc.py  version.py  windows.py
